css/pixel-editor.scss
/* ... */
.selected-layer {
	ul.layer-buttons li.layer-button {
		visibility: visible;
		button svg path {
			fill: $baseselectedicon;
		}

		&:hover button svg path {
			fill: $baseselectediconhover;
		}
	}

	color: $baseselectedtext;
	background-color: $baseselected !important;
}

.layerdragover {
	margin-top: 5px;
	border-top: 3px solid $basehovertext;
}

.layers-menu-entry {
	cursor: pointer;
	margin-bottom: 2px;
	font-size: 1em;
	color: $basetext;
	background-color: lighten($basecolor, 4%);
	display: inline-block;
	height: 50px;
	width: 100%;
	display: flex;
	align-items: center;

	ul.layer-buttons {
		top: 0;
		left: 0;
		margin: 0;
		padding: 0;
		box-sizing: border-box;
		position: relative;
		height: 100%;
		list-style: none;

		path {
			fill: $basehovericon;
		}
		li:hover {
			path {
				fill: $basehovericonhover;
			}
		}

		.layer-button {
			visibility: hidden;
			height: 50%;
		}
	}

	.lock-layer-button,
	.hide-layer-button {
		background: none;
		border: none;
		cursor: pointer;
		height: 100%;
		position: relative;
	}

	canvas {
		display: inline-block;
		height: 50px;
		width: 50px;
		background-color: lightgrey;
		left: 4px;
	}

	p {
		right: 0;
		display: inline-block;
		padding-left: 10px;
		height: 18px;
		overflow: hidden;
		position: relative;
	}

}

.layers-menu-entry:hover {
	ul.layer-buttons li {
		visibility: visible !important;
	}

	color: $basehovertext;
	background-color: $basehover;
}

//don't let svg handle click events, just send to parents
svg {
	pointer-events: none;
	path {
		pointer-events: none;
	}
}

//remove blue outline in chrome
*:focus {
	outline: 0 !important;
}

.weak {
	font-size: 0.8em;
	color: $basetextweak;
}

.drawingCanvas {
	cursor: url('/pixel-art-where-to-start/pencil-tool-cursor.png');

	border: solid 1px #fff;
	image-rendering: optimizeSpeed;
	/* Legal fallback */
	image-rendering: -moz-crisp-edges;
	/* Firefox        */
	image-rendering: -o-crisp-edges;
	/* Opera          */
	image-rendering: -webkit-optimize-contrast;
	/* Safari         */
	image-rendering: optimize-contrast;
	/* CSS3 Proposed  */
	image-rendering: crisp-edges;
	/* CSS4 Proposed  */
	image-rendering: pixelated;
	/* CSS4 Proposed  */
	-ms-interpolation-mode: nearest-neighbor;
	/* IE8+           */
	width: 400px;
	height: 400px;
	position: fixed;
	display: none;
	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.64);
	background-color: transparent;
}

#checkerboard {
	z-index: 1;
}

#pixel-canvas {
	z-index: 3;
	background: transparent;
}

#pixel-grid {
	z-index: 5000;
	background: transparent;
}

#tmp-canvas {
	z-index: 5;
	background: transparent;
}


#vfx-canvas {
	z-index: -5000;
	background: transparent;
}

#eyedropper-preview {
	position: absolute;
	width: 45px;
	height: 45px;
	border-radius: 30px;
	border: solid 10px red;
	z-index: 1200;
	display: none;
	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25), inset 0 0 6px 0 rgba(0, 0, 0, 0.2);
	pointer-events: none;
	&.dark {
		box-shadow: 0 0 8px 0 rgba(255, 255, 255, 0.5), inset 0 0 6px 0 rgba(255, 255, 255, 0.5);
	}
}

#brush-preview {
	position: absolute;
	border: solid 1px #fff;
	z-index: 1200;
	box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5), inset 0 0 2px 0 rgba(0, 0, 0, 0.5);
	pointer-events: none;
	left: -500px;
	&.dark {
		border: solid 1px #000;
		box-shadow: 0 0 3px 0 rgba(255, 255, 255, 0.8), inset 0 0 3px 0 rgba(255, 255, 255, 0.8);
	}
}

#canvas-view {
	bottom: 0px;
	left: 64px;
	right: 48px;
	top: 48px;
	cursor: none;
	position: fixed;
	display: block;
}

#canvas-view-shadow {
	box-shadow: inset 0px 0px 4px 0px rgba(0, 0, 0, 0.4);
	position: fixed;
	bottom: 0px;
	left: 64px;
	right: 48px;
	top: 48px;
	display: block;
	pointer-events: none;
}

#main-menu {
	height: 48px;
	left: 0;
	right: 0;
	list-style-type: none;
	margin: 0;
	padding: 0;
	background-color: $basecolor;
	position: fixed;
	z-index: 1110;
	overflow: visible;
	&>li {
		float: left;
		height: 100%;
	}
	li button,
	li a {
		color: $basetext;
		height: 100%;
		padding: 17px;
		background: none;
		border: none;
		cursor: pointer;
	}
	li.selected {
		background-color: $basehover;
		&>button {
			color: $basehovertext;
		}
		ul {
			display: block;
		}
	}
	li ul {
		display: none;
		position: absolute;
		top: 48px;
		list-style-type: none;
		padding: 0;
		margin: 0;
		background-color: $basehover;
		box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5);
		padding-bottom: 2px;
		li {
			width: 100%;
			button,
			a {
				width: 100%;
				text-align: left;
				padding: 8px 32px 8px 16px;
				font-size: 1em;
				&:hover {
					background-color: $baseselected;
					color: $baseselectedtext;
				}
			}
			a {
				display: block;
				text-decoration: none;
				box-sizing: border-box;
			}
		}
	}
	.disabled {
		color: #6f6e70 !important;
	}
}


/*app title*/

.logo {
	color: lighten($basecolor, 20%);
	text-transform: uppercase;
	font-weight: bold;
	padding: 17px 10px 0;
	cursor: default;
	box-sizing: border-box;
}

#data-holders {
	display: none;
}

#tools-menu,
#colors-menu {
	list-style-type: none;
	top: 48px;
	bottom: 0;
	padding: 0;
	margin: 0;
	background-color: $basecolor;
	box-sizing: border-box;
	position: fixed;
	z-index: 1120;
}

#tools-menu {
	left: 0;
	width: 64px;
}

#colors-menu {
	right: 200px;
	width: 48px;
	display: flex;
	justify-content: flex-start;
	flex-direction: column;
	li {
		width: 48px;
		flex-basis: 48px;

		&:not(.noshrink) {
			flex-grow: 1;
		}
		&.noshrink {
			flex-grow: 0;
			flex-shrink: 0;
		}
	}
}

//added when the color is a duplicate of another
#duplicate-color-warning {
	display: inline-block;
	visibility: hidden;
	margin-left: 5px;
	opacity: 0.75;
	cursor: help;
	&:hover {
		opacity: 0.9;
	}
}

.shake {
	animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
	position: relative;
}

@keyframes shake {
	10%,
	90% {
		transform: translate3d(-1px, 0, 0);
	}
	20%,
	80% {
		transform: translate3d(1px, 0, 0);
	}
	30%,
	50%,
	70% {
		transform: translate3d(-2px, 0, 0);
	}
	40%,
	60% {
		transform: translate3d(2px, 0, 0);
	}
}
/* ... */

